# camera_calibrator

./: .gitignore  404.html  LICENSE  README.md  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  _not-found.html  _not-found.txt  ceres.js  deploy_to_hf.sh  index.html  index.txt  next.config.ts  opencv_master.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  deploy-vercel.yml  deploy.yml
.trae/documents/: Build Online Camera Calibrator with Next.js & OpenCV.md
_next/static/PRnCYeCkZx3Cz8I3Lpixf/: _buildManifest.js
_next/static/UkO22qy6h11NPt1NTO9Ao/: _buildManifest.js
_next/static/chunks/: 0f8af13e-716957f1da21dc96.js  1e150a4c634f39b5.js  2501de4ff6b5e04a.css  333.10022deab811e190.js  333.6a5713daad594db3.js  333.7a5381819514560a.js  333.88eef7c9e3d854ff.js  333.b373acd5f9e2a506.js  333.c57842f5a53579e8.js  333.fa4467453d65a938.js  333.fcfe0cd56633aae1.js  3995be56f7df5b53.js  672.709871283765441f.js  794-58aa85c84bf4c68e.js  826-5260f0666486060e.js  826-54b23430f136b5c9.js  927.3fd8a9bb48a63997.js  98.05bd19d318bf7ec5.js  98.1fabcf851040541e.js  98.21cc441b48727618.js  98.27b0467f7be7903b.js  98.2cb6cb17a7d5f3f5.js  98.66381a20f330a6ab.js  98.6bec1f7d88182d46.js  98.7590b4e0cdd5505e.js  98.83971fe2a8ea1a64.js  98.bc79acb3a3ff3c9d.js  a10971e9eef055c8.js  aaea2bcf.6a2560b34eba8af9.js  bea376b3cfc3b38e.js  ec7f6d9c816f371b.js  main-1dc7710828733a92.js  main-app-79ee03a6f48060e0.js  turbopack-8ad807503cdf2cf7.js  turbopack-cd76eb462a4f717b.js  webpack-0001d93c46bef59a.js  webpack-1a64961c8387d577.js  webpack-1e7424e3410c39d1.js  webpack-1fc594b1325917bf.js  webpack-2ec79b3b7813ac27.js  (+13 more)
_next/static/chunks/app/: layout-005f2c10ccf24124.js  layout-13a5b86926b1fff5.js  layout-1bb1834ed7fbe863.js  layout-272ca412cab08d6a.js  layout-37dabeb8c988ac69.js  layout-48f6ca11d1a94186.js  layout-5c3accc1c0fd30b9.js  layout-6bd7beadcdedd366.js  layout-884099fc6706fc87.js  layout-9e28ead70f4bca20.js  layout-ba23e938c29a3f3d.js  layout-c5dd45009faa03f5.js  layout-d856745323033328.js  layout-dd19e43fa5fee9ad.js  layout-f13daed261715344.js  layout-ff62d11151aa077f.js  page-03c9b1b0ea7598c8.js  page-052b5683c13255ca.js  page-0b04698bb4e39c33.js  page-188bfdde12ffcde3.js  page-2f2d153e08736c31.js  page-49ed0b8ddb146abd.js  page-5940b07c88564fbe.js  page-5d332f1a2edff6f6.js  page-6375d9673612aeeb.js  page-6b96e259be041480.js  page-732e2ceed61461a1.js  page-815c6c8c4742d67d.js  page-83d2dbad69298228.js  (+4 more)
_next/static/css/: 04b90ea833a4b309.css  793be1782e0d4fe9.css  7d7e6e87ea161540.css  96ddbcce92e28a63.css  c7f87c383b241970.css
_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt
app/: layout.tsx  page.tsx  robots.ts  sitemap.ts
app/api/calibrate_compute/: route.ts
app/api/detect/: route.ts
app/context/: AprilTagContext.tsx  CalibrationContext.tsx  ThemeContext.tsx
app/utils/: calibration.ts  image.ts  math.ts
app/workers/: atag.worker.ts  calibration.worker.ts
components/: ExtrinsicsView.tsx  ImageView.tsx  MainContent.tsx  ReprojectionErrorChart.tsx  ResultsModal.tsx  SettingsModal.tsx  Sidebar.tsx
cpp/: CMakeLists.txt  build_minimal.sh  build_wasm.sh  calibrate_camera.cpp  detect_corners.cpp  wasm_interface.cpp
hf_space/: Dockerfile  README.md  app.py  requirements.txt
public/: ceres.wasm
(+1 files in other folders)
